# ice-cream-dataops

./: pyproject.toml
.git-backup/: config  index  packed-refs
.git-backup/logs/refs/heads/: main
.git-backup/logs/refs/remotes/origin/: HEAD  main
.git-backup/objects/pack/: pack-8e0f4da193e5c92d5881da9755ac09b3275e024f.idx  pack-8e0f4da193e5c92d5881da9755ac09b3275e024f.pack  pack-8e0f4da193e5c92d5881da9755ac09b3275e024f.rev
.git-backup/refs/remotes/origin/: main
.github/workflows/: deploy.yaml
ice-cream-dataops/: build_info.test.yaml  config.prod.yaml  config.test.yaml  pyproject.toml
ice-cream-dataops/.github/workflows/: deploy.yaml
ice-cream-dataops/function_local_venvs/icapi_datapoints_extractor/: run_check.py
ice-cream-dataops/function_local_venvs/oee_timeseries/: run_check.py
ice-cream-dataops/modules/bootcamp/data_foundation/auth/: admin.readwrite.group.yaml  data_developer.yaml
ice-cream-dataops/modules/bootcamp/ice_cream_api/auth/: icapi_extractors.yaml
ice-cream-dataops/modules/bootcamp/ice_cream_api/data_sets/: data_sets.yaml
ice-cream-dataops/modules/bootcamp/ice_cream_api/functions/: schedules.Schedules.yaml
ice-cream-dataops/modules/bootcamp/ice_cream_api/workflows/: wf_icapi_data_pipeline.WorkFlow.yaml  wf_icapi_data_pipeline.WorkflowVersion.yaml
ice-cream-dataops/modules/bootcamp/use_cases/oee/auth/: data_pipeline_oee.yaml
