[tool.poetry]
name = "ice-cream-dataops"
version = "0.1"
description = ""
authors = ["oystein <oystein.kvilhaugsvik@bouvet.no>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.10"
cognite-toolkit = "0.3.29"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
